Fri Feb 26 17:38:38 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (welcome): $MJ instead of $MAJORDOMO.

	* lib/mj_cf_data.pl: Tweak 'welcome_files' description.

	* files/en/help/help: Mention "unregister".  Use $MJ instead of
 	$WHOAMI and $MJOWNER instead of $OWNER.

	* lib/Mj/List.pm: Add 'nohide' meaning the same thing as showall.

	* lib/Mj/Resend.pm (post): Add some new substitutions in acks.
	(_post): Add new substitutions for headers, fronters and footers.

	* postinstall: Big changes; split out utility functions and
 	installation functions from the main file (which gets much smaller
 	now).

1999-02-26  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Resend.pm (_post): Pass the sender to archive_add; this
	will cause it to generate a mailbox separator to replace the one
	we removed in mj_email several days ago.  Not doing this causes
	bogus archives.

Tue Feb 23 01:42:40 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/ask_basic.pl (ask_basic): Check for qmail before Sendmail.

Tue Feb 23 01:42:40 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MTAConfig.pm (qmail): No work to do.  Comment out all
 	qmail specific code; it's not necessary.

	* setup/ask_basic.pl (ask_basic, ask_qmail, ask_domain): More
 	qmail support tweaks.

Mon Feb 22 01:04:48 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Digest/Index.pm (done): Fix $args problem: copy in args
 	during object construction, since we don't have the hash at the
 	end.

	* setup/ask_basic.pl (ask_basic): Enable qmail as a supported MTA.

Sun Feb 21 00:38:40 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Digest/Index.pm (done): Add To and From headers.

	* bin/mj_email (do_qmail): New function.  When called with -Q,
 	look at $ENV{LOCAL} and fake various elements of %opts to make it
 	look to the rest of the code as if the appropriate flags had been
 	passed.
  	